# cpp-injestor

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile  benchmark.py  compile_commands.json  docker-compose.yml  python_ingestor.py  readme-ai.md  readme.md  search.py
docs/specs/: 2026-05-25-cpp-ingestor-design.md  2026-05-25-cpp-injestor-design.md
docs/superpowers/plans/: 2026-05-25-cpp-ingestor.md  2026-05-25-cpp-injestor.md  2026-05-25-pdf-parsing-poppler.md  2026-05-26-header-detection.md
scripts/: enqueue_all.sh
src/: Chunker.cpp  Chunker.h  Embedder.cpp  Embedder.h  JobPayload.h  MilvusClient.cpp  MilvusClient.h  PdfParser.cpp  PdfParser.h  RedisConsumer.cpp  RedisConsumer.h  main.cpp
tests/: Chunker_test.cpp  PdfParser_test.cpp  RedisConsumer_test.cpp  main_test.cpp
